# docker-run

./: .gitattributes  .gitignore  Cargo.nix  Cargo.toml  LICENSE  README.md  crate-hashes.json  default.nix  docker.nix  run.sh  service.nix
.github/workflows/: release.yaml
api_docs/: run.md
docs/install/: docker-ubuntu-20.10.md  ubuntu-20.09.md  ubuntu-20.10-gvisor.md  ubuntu-20.10.md
scripts/: test_glot.sh
scripts/payload/: assembly.json  ats.json  bash.json  c.json  clojure.json  cobol.json  coffeescript.json  cpp.json  crystal.json  csharp.json  dart.json  dlang.json  elixir.json  elm.json  erlang.json  fsharp.json  golang.json  groovy.json  haskell.json  idris.json  java.json  javascript.json  julia.json  kotlin.json  lua.json  mercury.json  nim.json  ocaml.json  perl.json  perl6.json  php.json  python.json  raku.json  ruby.json  rust.json  scala.json  swift.json  typescript.json
src/: main.rs
src/docker_run/: config.rs  debug.rs  docker.rs  environment.rs  http_extra.rs  mod.rs  run.rs  unix_stream.rs
src/docker_run/api/: mod.rs  not_found.rs  root.rs  run.rs  version.rs
src/glot_docker_run/: config.rs  docker.rs  http_extra.rs  mod.rs  run.rs
src/glot_docker_run/api/: run.rs
systemd/: docker-run.service
