[package]
name = "glot-docker-run"
version = "0.1.0"
authors = ["Petter Rasmussen <petter@hask.no>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "0.2.1"
httparse = "1.3.4"
serde = { version = "1.0.116", features = ["derive"] }
serde_json = "1.0.58"
iowrap = "0.2.0"
log = "0.4.11"
env_logger = "0.7.1"
tiny_http = "0.7.0"
